syntax = "proto3";

option go_package = "./generated";

import "google/protobuf/timestamp.proto";

package transmitter;

service Transmitter {
	rpc Greeting(Empty) returns (Hello);
	rpc GetStatistics(SessionID) returns (stream StatisticValue);
}

message Empty {}

message Hello {
	SessionID session_id = 1;
}

message SessionID {
	string ID = 1;
}

message StatisticValue {
	SessionID session_id = 1;
	double frequency = 2;
	google.protobuf.Timestamp current_time = 3;
}
